[package]
name = "cyanotype"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1"
futures = "0.3.17"
async-trait = "0.1.51"
async-broadcast = "0.3.4"

[dev-dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.ac-ffmpeg]
git = "https://github.com/alisww/rust-ac-ffmpeg.git"

[dependencies.substation]
git = "https://github.com/alisww/substation.git"

[dependencies.subrip]
git = "https://github.com/alisww/substation.git"

[dependencies.image]
version = "0.23"
default-features = false